--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -35,6 +35,10 @@
   --color-grey-1: #fdfeff;
 }
 
+body.dark-mode{
+  background-color: var(--color-grey-1);
+}
+
 body {
   font-family: "Inter", sans-serif;
   font-style: normal;
