--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,22 @@
   background-color: var(--color-grey-8);
 }
 
+.drop{
+  animation: dropDown ease-in-out .7s;
+}
+
+@keyframes dropDown {
+  0%{
+    transform: translateY(-100px);
+  }
+  70%{
+    transform: translateY(10px);
+  }
+  100%{
+    transform: translateY(0);
+  }
+}
+
 .header__title {
   color: var(--color-grey-2);
 }
@@ -38,6 +54,24 @@
 .genres__title,
 .genres__list {
   padding-block: 1rem;
+}
+
+.slide{
+  animation: slideIn ease-in-out .7s;
+}
+
+@keyframes slideIn {
+  0%{
+    transform: translateX(-100);
+    opacity: 0;
+  }
+  70%{
+    transform: translateX(5px);
+    opacity: 1;
+  }
+  100%{
+    transform: translateX(0);
+  }
 }
 
 .genres__title {
@@ -131,6 +165,8 @@
   flex-direction: column;
   gap: 1.25rem;
   border-radius: 0.25rem;
+  
+  transition: width ease-in-out .7s;
 }
 
 .album__item:hover {
@@ -148,6 +184,11 @@
   background-position: center;
 
   object-fit: cover;
+  transition: transform ease-in-out .7s;
+}
+
+.album__cover:hover{
+  transform: scale(1.1);
 }
 
 .album__details {
